de-germanify the capitalization

--- a/site/layouts/partials/alternativeto/alternativeto-hero-section.html
+++ b/site/layouts/partials/alternativeto/alternativeto-hero-section.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row text-center justify-content-center">
       <div class="col-sm-6 col-md-6">
-        <h1 class="display-3 mb-4">The Modern Alternative to Pingdom for Developers</h1>
+        <h1 class="display-3 mb-4">The modern alternative to Pingdom for developers</h1>
         <div class="mb-4">
           <a class="signup-button btn btn-success btn-lg" data-signup="data-signup"
                              href="https://app.checklyhq.com/signup">Start your free trial</a></div>
