fix: add Pagerduty & Opsgenie label to the pricing table [ch26] (#13)

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -87,7 +87,7 @@
                     ></span
                   >
                 </div>
-                <div class="pt-list-item">Pagerduty integration</div>
+                <div class="pt-list-item">Pagerduty & Opsgenie</div>
                 <div class="pt-list-item">
                   <span class="pt-tooltip-show-text"
                     ><span class="pt-tooltip-show">Prometheus endpoint</span
@@ -202,7 +202,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Pagerduty integration</div>
+                      <div class="pt-text">Pagerduty & Opsgenie</div>
                       <div class="pt-value">
                         <i class="ion-close-round"></i>
                       </div>
@@ -341,7 +341,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Pagerduty integration</div>
+                      <div class="pt-text">Pagerduty & Opsgenie</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -477,7 +477,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Pagerduty integration</div>
+                      <div class="pt-text">Pagerduty & Opsgenie</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -616,7 +616,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Pagerduty integration</div>
+                      <div class="pt-text">Pagerduty & Opsgenie</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
