feat: add Opsgenie on landing/alerting pages, update alerting icons [ch26] (#14)

--- a/site/layouts/partials/alerting-section.html
+++ b/site/layouts/partials/alerting-section.html
@@ -6,7 +6,7 @@
         <img alt="alert notification channels" class="img-w360 mb-4" src="/landing/alerting-options@2x.png"/>
       </div>
       <div class="col-sm-12 col-md-10"><p class="lead">Keep your team up to date with a
-        generous helping of SMS messages and unlimited email, Pagerduty, Slack and web hook
+        generous helping of SMS messages and unlimited email, Pagerduty, Opsgenie, Slack and web hook
         notifications. Control exactly how, when and how often you get alerted. "Double checking" is enabled
         by default to never get false positives.</p>
         <a class="cta-link" href="/docs/alerting">Learn more</a>
