Adding nonprofit texts.

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -24,8 +24,9 @@
               We don't take ourselves too serious; we take our work and our customers very seriously.
             </p>
             <p>
-              We ❤️open source and aim to donate 1% of our revenue to non-corporate backed open source maintainers.
+              We ❤️ open source and aim to donate 1% of our revenue to non-corporate backed open source maintainers.
               See <a href="https://github.com/tnolet?tab=sponsoring](https://github.com/tnolet?tab=sponsoring">this page</a> for our current sponsorship status.
+              Also, we support nonprofit organizations by donating a Checkly Developer plan to them.
             </p>
             <p>Interested in joining us? <a href="/jobs">Learn more here</a> 👈</p>
             <div class="divider pt-5"></div>
