--- a/site/layouts/jobs/list.html
+++ b/site/layouts/jobs/list.html
@@ -7,6 +7,7 @@
       </div>
     </div>
     <div class="row mb-4">
+      {{ if (len .Data.Pages) gt 0 }}
       <div class="col-sm-12 col-lg-8 offset-lg-2 text-left">
         {{ range first 10 .Data.Pages }}<a href="{{.RelPermalink}}"
           ><div class="d-flex flex-row justify-content-start mb-2">
@@ -22,6 +23,12 @@
           </div></a
         >{{end}}
       </div>
+      {{else}}
+      <div class="col-sm-12 col-lg-8 offset-lg-2 text-center">
+        <h5 class="mb-2">😮 No open positions just now...</h5>
+      </div>
+      {{end}}
+
     </div>
   </div>
 {{end}}
