--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -156,4 +156,59 @@
   .badge {
     font-family: 'fakt-soft', sans-serif;
   }
+
+  .markdown-tabs {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    border: 1solid $gray-light;
+    border-radius: $border-radius;
+
+    overflow: hidden;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    label {
+      display: inline-block;
+      padding: 0.75em 1.5em;
+      border-bottom: 1px transparent;
+      cursor: pointer;
+      margin-bottom: 0;
+      text-transform: uppercase;
+      font-size: .75rem;
+      color: $gray;
+      font-weight: 500;
+      line-height: 24px;
+      letter-spacing: .04rem;
+    }
+
+    .markdown-tabs-content {
+      order: 999; //Move content blocks to the end
+      width: 100%;
+      border-top: 1px solid $gray-light;
+      padding: 1rem;
+      display: none;
+    }
+
+    input[type="radio"]:checked + label {
+      border-bottom: 3px solid $brand-primary;
+      color: $brand-primary;
+    }
+    input[type="radio"]:checked + label + .markdown-tabs-content {
+      display: block;
+    }
+    input[type="radio"]:focus + label {
+      //@include outline
+    }
+
+    input.toggle {
+      height: 0;
+      width: 0;
+      overflow: hidden;
+      opacity: 0;
+      position: absolute;
+    }
+  }
+
 }
