docs: adds maintenance windows docs [ch-1310]

--- a/site/layouts/partials/all-features.html
+++ b/site/layouts/partials/all-features.html
@@ -20,10 +20,10 @@
         <p>Display a <a class="info-link" href='/docs/dashboards/'>public dashboard</a> on your site or in-office
           mounted TV, hosted on your company domain.</p></div>
       <div class="col-sm-4"><h5>Global coverage</h5>
-        <p>Get global latency metrics by running your checks from up to eight (more coming) data center locations around
+        <p>Get global latency metrics by running your checks from up to twenty data center locations around
           the world.</p></div>
       <div class="col-sm-4"><h5>Alerting channels</h5>
-        <p>Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, email, web hook and Slack alerting
+        <p>Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, Opsgenie, email, web hook and Slack alerting
           integrations.</p></div>
     </div>
     <div class="row">
