--- a/src/scss/_promo-banner.scss
+++ b/src/scss/_promo-banner.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 .promo-banner {
   display: flex;
   flex-direction: row;
@@ -8,13 +10,24 @@
   z-index: 999999;
   width: 100%;
   padding: .5rem;
-  font-size: 15px;
+
+  a {
+    color: #ff4949;
+  }
+  .ion-arrow-right-c {
+    color: #ff4949;
+  }
   .promo-banner-link {
     display: flex;
     text-decoration: none;
   }
-  &.funding {
-    background-color: $blue-light;
-    color: $gray-dark;
+  &.headless {
+    background: #f9fafc;
+    color: #697280;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    strong {
+      font-weight: 600;
+    }
   }
 }
