fix: shuffle around for mobile

--- a/site/layouts/partials/promo-banner.html
+++ b/site/layouts/partials/promo-banner.html
@@ -3,8 +3,12 @@
     <span class="text-gray-dark">🖖 Wanna learn about <strong>Puppeteer</strong> and <strong>Playwright?</strong></span>
   </a>
   <a class="promo-banner-link" href="https://www.producthunt.com/posts/theheadless-dev-2" target="_blank">
-    <span class="ml-1 mr-1">We just launched <strong>theheadless.dev</strong></span>
-    <span class="mr-2">on <img class="mr-1" src="/landing/product-hunt-logo.png" height="16px" alt="product hunt logo">Product Hunt</span>
-    <div class="ion-arrow-right-c"></div>
+    <span class="ml-1 mr-1">We just launched
+      <strong>theheadless.dev</strong> on
+      <img class="mr-1" src="/landing/product-hunt-logo.png" height="16px" alt="product hunt logo">Product Hunt
+      <span class="ion-arrow-right-c"></span>
+    </span>
+
   </a>
 </section>
+
