refactor: link theheadless.dev

--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -13,6 +13,7 @@
         </li>
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://theheadless.dev">Guides</a></li>
         <li class="nav-item"><a class="nav-link" href="https://blog.checklyhq.com" target="_blank">Blog</a></li>
         {{ if eq .Section "docs" }}
           <form class="form-inline">
