fix address layout.

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -127,7 +127,8 @@
             </p>
             <address>
               🇩🇪 Germany<br>
-              Kopernikusstraße 35 10243 Berlin<br>
+              Kopernikusstraße 35<br>
+              10243 Berlin<br>
 
               entrance at:<br>
               Comeniushof “Fabrik” Gubener Straße 47<br>
