refactor: move headless link to landing

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -11,6 +11,7 @@
         {{ partial "api-monitoring-section" . }}
         {{ partial "site-monitoring-section" . }}
         {{ partial "e2e-pr-section" . }}
+        {{ partial "learn-headless-section" . }}
         {{ partial "alerting-section" . }}
         {{ partial "results-section" . }}
         {{ partial "workflow-section" . }}
