--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,6 +38,7 @@
 @import 'sections/trusted-by';
 @import 'sections/e2e-pr';
 @import 'sections/alternativeto-hero';
+@import 'sections/learn-headless';
 
 
 body {
