--- a/site/layouts/partials/scripts.html
+++ b/site/layouts/partials/scripts.html
@@ -9,4 +9,5 @@
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 <script src="/js/index.js"></script>
