--- a/site/layouts/partials/all-features.html
+++ b/site/layouts/partials/all-features.html
@@ -9,7 +9,7 @@
           query parameters and unlimited assertions.</p></div>
       <div class="col-sm-4"><h5>synthetic monitoring</h5>
         <p>Scripted browser clicks flow using Chrome Puppeteer Node.js framework. <a
-            class="info-link" href='/docs/browser-checks/screenshots/'>Take up to three screenshots</a> per check.</p>
+            class="info-link" href='/docs/browser-checks/screenshots/'>Take up to ten screenshots</a> per check.</p>
       </div>
       <div class="col-sm-4"><h5>CI/CD integration</h5>
         <p><a class="info-link" href='/docs/cicd/triggers/'>Trigger your checks</a> on GitHub push & PR's or using a
