fix: tiny typo fixes across the website [ch-000] (#30)
* fix: tiny typo fixes across the website [ch-000]

* fix: typo [ch-000]

* fix: apply review [ch-000]

--- a/site/layouts/partials/all-features.html
+++ b/site/layouts/partials/all-features.html
@@ -23,7 +23,7 @@
         <p>Get global latency metrics by running your checks from up to twenty data center locations around
           the world.</p></div>
       <div class="col-sm-4"><h5>Alerting channels</h5>
-        <p>Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, Opsgenie, email, web hook and Slack alerting
+        <p>Generous SMS bundles & unlimited recipients / endpoints for Pagerduty, Opsgenie, email, webhooks and Slack alerting
           integrations.</p></div>
     </div>
     <div class="row">
