--- a/site/layouts/partials/free-trial-row.html
+++ b/site/layouts/partials/free-trial-row.html
@@ -6,7 +6,7 @@
           <div class="card-block">
             <div class="text-center">
               <div class="section-header pt-4 font-weight-bold">Try out Checkly for free for 14 days</div>
-              <p class="lead-text">Start monitoring your API endpoints and your vital site transaction.</p><a
+              <p class="lead-text">Start monitoring your API endpoints and your vital site transactions.</p><a
                 class="signup-button btn btn-success btn-lg" data-signup="data-signup"
                 href="https://app.checklyhq.com/signup">Start your free trial</a>
               <div class="pt-2 text-muted mb-4"><small>no credit card required</small></div>
