chore: add 1password testimonial

--- a/site/layouts/partials/testimonial-three-col-row.html
+++ b/site/layouts/partials/testimonial-three-col-row.html
@@ -3,6 +3,19 @@
     <div class="row">
       <div class="col-sm-12 col-md-4">
         <div class="card testimonial-card mb-5 mb-md-0">
+          <div class="card-block"><a href="https://1password.com" target="_blank"><img class="testimonial-logo"
+                                                                                        src="/images/testimonials/1password_logo.png"/></a>
+            <p class="testimonial-text">"The flexible features and developer-friendly API made the integration super easy. Checkly is a fabulous developer tool! Bonus: their support is super friendly and knowledgeable!"</p>
+            <div class="testimonial-portrait"><img src="/images/testimonials/1password_portrait.jpeg" class="rounded-circle" /></div>
+            <div class="testimonial-name-badge">
+              <div class="text-muted font-weight-bold">Connor Hicks</div>
+              <div class="text-muted">Lead Developer - Platform Integrations</div>
+              <a class="text-muted" href="https://1password.com/" target="_blank">1password.com</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4">
+        <div class="card testimonial-card mb-5 mb-md-0">
           <div class="card-block"><a href="https://supplypike.com" target="_blank"><img class="testimonial-logo"
                                                                                         src="/images/testimonials/supplypike_logo.png"/></a>
             <p class="testimonial-text">"Checkly helps our teams to ship code more confidently and guide data-driven
@@ -30,30 +43,6 @@
               <div class="text-muted font-weight-bold">François Proulx</div>
               <div class="text-muted">Senior DevSecOps</div>
               <a class="text-muted" href="http://www.dfuse.io/" target="_blank">dfuse.io</a></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-4">
-        <div class="card testimonial-card mb-5 mb-md-0">
-          <div class="card-block"><a href="https://lyfegen.com/" target="_blank"><img class="testimonial-logo"
-                                                                                      src="/images/testimonials/lyfegen_logo.png"/></a>
-            <p class="testimonial-text">"Checkly feels seamless and responsive. It took me about ten minutes to migrate
-              from Pingdom and StatusPage.io, saving on our monthly monitoring bill."</p>
-            <div class="testimonial-portrait"><img src="/images/testimonials/lyfegen_portrait.png"/></div>
-            <div class="testimonial-name-badge">
-              <div class="text-muted font-weight-bold">James Gannon</div>
-              <div class="text-muted">Chief Digital Officer</div>
-              <a class="text-muted" href="https://lyfegen.com/" target="_blank">lyfegen.com</a></div>
-            <!--a(href='http://www.insiteintelligence.com/', target='_blank')-->
-            <!--  img.testimonial-logo(src='/images/testimonials/insite_logo.png', alt='customer logo')-->
-            <!--p.testimonial-text-->
-            <!--  | "Checkly makes it simple and easy for us to measure performance and automate the manual-->
-            <!--  | tasks of ensuring our web-based platform is available for our customers."-->
-            <!--.testimonial-portrait-->
-            <!--  img(src='/images/testimonials/insite_portrait.png', alt='customer portrait')-->
-            <!--.testimonial-name-badge--><!--  .text-muted.font-weight-bold Daniel Schleig-->
-            <!--  .text-muted IT & Systems Lead-->
-            <!--  a.text-muted(href='http://www.insiteintelligence.com/' target='_blank') insiteintelligence.com-->
           </div>
         </div>
       </div>
