landing: add playwright [ch-1757] (#29)
* landing: add playwright [ch-1757]

* site: small fixes [ch-1757]

* fix: small typos & apply review [ch-1757]

* fix: align icons

Co-authored-by: Jan <jmgrzesik@gmail.com>
Co-authored-by: Maxi Gimenez <maxi@checklyhq.com>

--- a/site/layouts/partials/all-features.html
+++ b/site/layouts/partials/all-features.html
@@ -8,7 +8,7 @@
         <p>Flexible <a class="info-link" href='/product/api-monitoring/'>API monitoring</a> with custom body, headers,
           query parameters and unlimited assertions.</p></div>
       <div class="col-sm-4"><h5>synthetic monitoring</h5>
-        <p>Scripted browser clicks flow using Chrome Puppeteer Node.js framework. <a
+        <p>Scripted browser clicks flow with Chrome using Puppeteer or Playwright Node.js frameworks. <a
             class="info-link" href='/docs/browser-checks/screenshots/'>Take up to ten screenshots</a> per check.</p>
       </div>
       <div class="col-sm-4"><h5>CI/CD integration</h5>
