--- a/site/layouts/partials/site-monitoring-section.html
+++ b/site/layouts/partials/site-monitoring-section.html
@@ -8,7 +8,7 @@
             onboarding
             flows. Take screenshots to get instant insights into what's working and what's not.
             <br><br>
-            Scripting browser click flows used to suck. Not anymore. Checkly uses Google's Puppeteer framework to run
+            Scripting browser click flows used to suck. Not anymore. Checkly uses Puppeteer & Playwright frameworks to run
             your
             flows in a Chrome browser.</p><a class="cta-link" href="/product/synthetic-monitoring/">Learn more</a>
         </div>
