--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -10,25 +10,34 @@
     </div>
     <div class="row text-left">
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <img alt="puppeteer logo" class="mb-4" src="/landing/puppeteer-logo.png"/>
-        <h5>Puppeteer</h5>
-        <p>Harness the full power of the Puppeteer framework to test and monitor your web apps.</p>
+        <div class="d-flex align-items-center mb-3" style="height: 80px;">
+          <img alt="puppeteer logo" src="/landing/puppeteer-logo.png"/>
+          <span alt="playwright logo" class="pl-2" style="font-size: 55px;">🎭</span>
+        </div>
+        <h5>Puppeteer & Playwright</h5>
+        <p>Harness the full power of the Puppeteer & Playwright frameworks to test and monitor your web apps.</p>
         <a class="cta-link" href="/docs/browser-checks">Learn more</a>
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <img alt="node.js logo" class="mb-4" src="/landing/javascript-logo.png"/>
+        <div class="d-flex align-items-center mb-3" style="height: 80px;">
+          <img alt="node.js logo" src="/landing/javascript-logo.png"/>
+        </div>
         <h5>Javascript</h5>
         <p>Extend your monitoring with Javascript for custom authentication and test logic.</p>
         <a class="cta-link" href="/docs/api-checks/setup-teardown-scripts/">Learn more</a>
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <img alt="prometheus logo" class="mb-4" src="/landing/github-logo.png"/>
+        <div class="d-flex align-items-center mb-3" style="height: 80px;">
+          <img alt="prometheus logo" src="/landing/github-logo.png"/>
+        </div>
         <h5>GitHub</h5>
         <p>Run your checks as tests on each <code>git push</code> and get results in your PR comments.</p>
         <a class="cta-link" href="/docs/cicd/github/">Learn more</a>
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-        <img alt="prometheus logo" class="mb-4" src="/landing/prometheus-logo.png"/>
+        <div class="d-flex align-items-center mb-3" style="height: 80px;">
+          <img alt="prometheus logo" src="/landing/prometheus-logo.png"/>
+        </div>
         <h5>Prometheus</h5>
         <p>Export uptime and status data to your Prometheus cluster.</p>
         <a class="cta-link" href="/docs/integrations/prometheus/">Learn more</a>
