feat: first pass messaging tweaks

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -9,7 +9,7 @@
             <h1>About Checkly</h1>
             <p class="mb-4">Checkly was founded in Berlin in 2018 to give the active monitoring and end-to-end-testing space a kick in the butt.
             We believe in a bright future where apps are built and shipped more reliably from dev to production and further.</p>
-            <p>Our vision is to create the active reliability platform for modern DevOps teams. A platform with a world class developer experience!</p>
+            <p>Our vision is to create the best active monitoring platform for developers using modern stacks. A platform with a world class developer experience!</p>
             <div class="divider pt-5"></div>
           </div>
         </div>
