--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -2,10 +2,9 @@
   <div class="container">
     <div class="row text-center justify-content-center">
       <div class="col-sm-12 col-md-8">
-        <h1 class="display-3 mb-4">Active Reliability for Modern DevOps Teams</h1>
-        <p class="lead mb-4">Monitor the performance and
-          correctness of your API endpoints & vital site transactions from a single,
-          simple dashboard.</p>
+        <h1 class="display-3 mb-4">Delightful Active Monitoring for the Modern Stack</h1>
+        <p class="lead mb-4">Checkly is the API & E2E monitoring platform for modern developers: programmable, flexible
+          and loving JavaScript.</p>
         <div class="mb-4">
           <a class="signup-button btn btn-success btn-lg" data-signup="data-signup"
                              href="https://app.checklyhq.com/signup">Start your free trial</a></div>
