--- a/site/layouts/shortcodes/sm-6-col-item.html
+++ b/site/layouts/shortcodes/sm-6-col-item.html
@@ -1,5 +1,5 @@
 {{ $header := .Get "header" }} {{ $image := .Get "image" }}
-<div class="col-sm-6 mb-lg-3">
+<div class="col-sm-6 mb-lg-3 px-md-5 pt-md-3">
   <h3 class="section-header">{{$header}}</h3>
   <p>{{.Inner | markdownify}}</p>
   <img src="{{$image}}" alt="" />
