--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   {{ partial "head" . }}
   <body>
-<!--  {{ partial "promo-banner" . }}-->
+  {{ partial "promo-banner-playwright" . }}
   {{ partial "navbar" . }}
     <div class="main">
       <div class="landing" id="landing">
