--- a/site/layouts/partials/promo-banner-playwright.html
+++ b/site/layouts/partials/promo-banner-playwright.html
@@ -1,8 +1,8 @@
 <section class="promo-banner headless">
-  <span class="text-gray-dark">🎭 Browser checks now support <strong>Playwright</strong>!</span>
+  <span class="text-gray-dark">🎭 Checkly now supports <strong>Playwright</strong>!</span>
 
   <span class="ml-1 mr-1">
-    <a class="promo-banner-link" href="https://www.producthunt.com/posts/theheadless-dev-2" target="_blank" rel="noopener noreferrer">
+    <a class="promo-banner-link" href="https://blog.checklyhq.com/we-now-support-playwright/" target="_blank" rel="noopener noreferrer">
       Read more on our blog <span class="ion-arrow-right-c pl-1"></span>
     </a>
   </span>
