style: revert === sign to heart emoji again [ch-000]

--- a/site/layouts/partials/e2e-pr-section.html
+++ b/site/layouts/partials/e2e-pr-section.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row mb-lg-4 text-center justify-content-center mb-5">
       <div class="col-sm-12 col-md-8"><h2 class="section-super-header">e2e testing</h2>
-        <h3 class="display-4 mb-4">Monitoring === E2E testing</h3>
+        <h3 class="display-4 mb-4">Monitoring 💘 E2E testing</h3>
       </div>
       <div class="col-sm-12 col-md-8">
         <p class="lead mb-4">Monitoring production is great. But catching bugs before they hit production is better.
