docs: adds job position

--- a/site/layouts/jobs/list.html
+++ b/site/layouts/jobs/list.html
@@ -2,7 +2,7 @@
   <div class="main container py-5">
     <div class="row mb-5">
       <div class="col-sm-12 col-lg-8 offset-lg-2 text-center">
-        <h1>Join Us. From Anywhere.</h1>
+        <h1>Join us!</h1>
         <span class="markdown">{{.Content}}</span>
       </div>
     </div>
