--- a/site/layouts/jobs/single.html
+++ b/site/layouts/jobs/single.html
@@ -12,7 +12,7 @@
               href="mailto:jobs@checklyhq.com?subject=Applying for {{.Title}}"
               >jobs@checklyhq.com</a
             >. Remember to include a written motivation on why you want to
-            join Checkly and what motivates in a job.
+            join Checkly and what motivates you in a job.
           </p>
           <a
             class="btn btn-success text-white"
