chore: update hero image

--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12 text-center">
-        <img class="hero-image img-fluid" src="/landing/home-dashboard@2x.png" alt="checkly monitoring dashboard"/>
+        <img class="hero-image img-fluid" src="/landing/hero-image.png" alt="checkly monitoring dashboard"/>
       </div>
     </div>
 </section>
