--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -23,6 +23,11 @@
   <link rel="alternate" href="{{ .Permalink }}" hreflang="en-us" />
   <link rel="canonical" href="{{ .Permalink }}" />
   <link rel="stylesheet" href="/css/style.css" />
+  
+  <link rel="preload" href="/fonts/fakt/FaktSoftPro-Normal.woff" as="font" />
+  <link rel="preload" href="/fonts/fakt/FaktSoftPro-Blond.woff" as="font" />
+  <link rel="preload" href="/fonts/fakt/FaktSoftPro-Medium.woff" as="font" />
+
   <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
   <script type="text/javascript">
     function OptanonWrapper() {}
