optimise images on alternative to

--- a/site/layouts/partials/alternativeto/alternativeto-hero-section.html
+++ b/site/layouts/partials/alternativeto/alternativeto-hero-section.html
@@ -8,7 +8,7 @@
                              href="https://app.checklyhq.com/signup">Start your free trial</a></div>
       </div>
       <div class="col-sm-6 text-center">
-        <img class="alternativeto-hero-image img-fluid" src="/landing/home-dashboard@2x.png" alt="checkly monitoring dashboard"/>
+        <img class="alternativeto-hero-image img-fluid" src="/alternative/home-dashboard@2x.png" alt="checkly monitoring dashboard"/>
       </div>
       </div>
     </div>
