some hacks to enable webp

--- a/site/layouts/partials/alternativeto/alternativeto-hero-section.html
+++ b/site/layouts/partials/alternativeto/alternativeto-hero-section.html
@@ -10,7 +10,7 @@
       <div class="col-sm-6 text-center">
         <picture>
           <source type="image/webp" srcset="/alternative/home-dashboard@2x.webp">
-          <source type="image/jpeg" srcset="/alternative/home-dashboard@2x.png">
+          <source type="image/png" srcset="/alternative/home-dashboard@2x.png">
           <img  class="alternativeto-hero-image img-fluid" src="/alternative/home-dashboard@2x.png" alt="checkly pingdom monitoring dashboard alternative"  />
         </picture>
 
