--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,3 +50,5 @@ body {
 
 @import '../css/vendor/pricing-tables.css';
 @import 'pricing-tables-checkly';
+
+@import '../css/vendor/ionicons/css/ionicons.min.css';
