--- a/site/layouts/docs/baseof.html
+++ b/site/layouts/docs/baseof.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   {{ partial "head" . }}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
 </head>
 
 <body>
@@ -9,6 +10,7 @@
   {{ block "main" . }}
   {{ end }}
   {{ partial "scripts" . }}
+  <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
   <script>
     docsearch({
       apiKey: 'b2b616fdea14b860ff00c72fa72bf267',
