delete the heap image
Pushing it directly to master since it is a minor change.

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -53,9 +53,7 @@
     <div class="row footer-bottom">
       <div class="col-12">
         <span>©2020 Checkly Inc. All Rights Reserved.</span>
-        <div class="float-right"><a class="mr-3" href="https://heapanalytics.com/?utm_source=badge" rel="nofollow"><img
-            style="width:108px;height:41px" src="//heapanalytics.com/img/badgeLight.png"
-            alt="Heap | Mobile and Web Analytics"/></a><a href="https://twitter.com/checklyhq" target="_blank"><img
+        <div class="float-right"><a href="https://twitter.com/checklyhq" target="_blank"><img
             src="/images/twitter.svg" alt="twitter logo"/></a></div>
       </div>
     </div>
