feat: full link title in footer [ch-000]

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -19,7 +19,7 @@
             <li><a href="/pricing">Pricing</a></li>
             <li><a href="/docs">Docs</a></li>
             <li><a href="/docs/api">API reference</a></li>
-            <li><a href="/alternative/to-pingdom/">Alternative to</a></li>
+            <li><a href="/alternative/to-pingdom/">Alternative to Pingdom</a></li>
             <li><a href="https://status.checklyhq.com/" target="_blank">Live dashboard</a><span
                 class="green-dot"></span></li>
           </ul>
