--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   {{ partial "head" . }}
-  <body>
+  <body class="landing">
   {{ partial "promo-banner-playwright" . }}
   {{ partial "navbar" . }}
     <div class="main">
