--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -50,6 +50,7 @@
           <ul>
             <li><a href="/alternative/to-pingdom/">Alternative to Pingdom</a></li>
             <li><a href="/alternative/to-runscope/">Alternative to Runscope</a></li>
+            <li><a href="/alternative/to-assertible/">Alternative to Assertible</a></li>
           </ul>
         </div>
       </div>
