--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -13,7 +13,11 @@
     </div>
     <div class="row">
       <div class="col-sm-12 text-center">
-        <img class="hero-image img-fluid" src="/landing/hero-image.png" alt="checkly monitoring dashboard"/>
+        <picture>
+          <source type="image/webp" srcset="/landing/hero-image.webp">
+          <source type="image/png" srcset="/landing/hero-image.png">
+          <img  class="hero-image img-fluid" src="/landing/hero-image.png" alt="checkly monitoring dashboard"  />
+        </picture>
       </div>
     </div>
 </section>
