--- a/site/layouts/partials/results-section.html
+++ b/site/layouts/partials/results-section.html
@@ -9,8 +9,13 @@
         raw result for you and your team to dive into.</p></div>
     </div>
     <div class="row">
-      <div class="col-sm-12 text-center"><img alt="monitoring results" class="results-image img-fluid"
-                                              src="/landing/check-results@2x.png"/></div>
+      <div class="col-sm-12 text-center">
+        <picture>
+          <source type="image/webp" srcset="/landing/check-results@2x.webp">
+          <source type="image/png" srcset="/landing/check-results@2x.png">
+          <img alt="monitoring results" class="results-image img-fluid" src="/landing/check-results@2x.png"/>
+        </picture>
+      </div>
     </div>
   </div>
 </section>
