--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -11,7 +11,11 @@
     <div class="row text-left">
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <div class="d-flex align-items-center mb-3" style="height: 80px;">
-          <img alt="puppeteer logo" src="/landing/puppeteer-logo.png"/>
+          <picture>
+            <source type="image/webp" srcset="/landing/puppeteer-logo.webp">
+            <source type="image/png" srcset="/landing/puppeteer-logo.png">
+            <img  alt="puppeteer playwright logo" src="/landing/puppeteer-logo.png"/>
+          </picture>
           <span alt="playwright logo" class="pl-2" style="font-size: 55px;">🎭</span>
         </div>
         <h5>Puppeteer & Playwright</h5>
@@ -20,7 +24,11 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <div class="d-flex align-items-center mb-3" style="height: 80px;">
-          <img alt="node.js logo" src="/landing/javascript-logo.png"/>
+          <picture>
+            <source type="image/webp" srcset="/landing/javascript-logo.webp">
+            <source type="image/png" srcset="/landing/javascript-logo.png">
+            <img alt="node.js logo" src="/landing/javascript-logo.png"/>
+          </picture>
         </div>
         <h5>Javascript</h5>
         <p>Extend your monitoring with Javascript for custom authentication and test logic.</p>
@@ -28,7 +36,11 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <div class="d-flex align-items-center mb-3" style="height: 80px;">
-          <img alt="prometheus logo" src="/landing/github-logo.png"/>
+          <picture>
+            <source type="image/webp" srcset="/landing/github-logo.webp">
+            <source type="image/png" srcset="/landing/github-logo.png">
+            <img alt="github logo" src="/landing/github-logo.png"/>
+          </picture>
         </div>
         <h5>GitHub</h5>
         <p>Run your checks as tests on each <code>git push</code> and get results in your PR comments.</p>
@@ -36,7 +48,11 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
         <div class="d-flex align-items-center mb-3" style="height: 80px;">
-          <img alt="prometheus logo" src="/landing/prometheus-logo.png"/>
+          <picture>
+            <source type="image/webp" srcset="/landing/prometheus-logo.webp">
+            <source type="image/png" srcset="/landing/prometheus-logo.png">
+            <img alt="prometheus logo" src="/landing/prometheus-logo.png"/>
+          </picture>
         </div>
         <h5>Prometheus</h5>
         <p>Export uptime and status data to your Prometheus cluster.</p>
