--- a/site/layouts/partials/alerting-section.html
+++ b/site/layouts/partials/alerting-section.html
@@ -3,7 +3,11 @@
     <div class="row mb-lg-4 text-center justify-content-center">
       <div class="col-sm-12 col-md-8"><h2 class="section-super-header">Alerting</h2>
         <h3 class="display-4 mb-4">Alerting when and how you want it</h3>
-        <img alt="alert notification channels" class="img-w360 mb-4" src="/landing/alerting-options@2x.png"/>
+        <picture>
+          <source type="image/webp" srcset="/landing/alerting-options@2x.webp">
+          <source type="image/png" srcset="/landing/alerting-options@2x.png">
+          <img alt="alert notification channels" class="img-w360 mb-4" src="/landing/alerting-options@2x.png"/>
+        </picture>
       </div>
       <div class="col-sm-12 col-md-10"><p class="lead">Keep your team up to date with a
         generous helping of SMS messages and unlimited email, Pagerduty, Opsgenie, Slack and webhook
@@ -16,7 +20,12 @@
     </div>
     <div class="row">
       <div class="col-sm-12 text-center">
-        <img alt="alerting settings" class="alerting-image big-drop-shadow img-fluid" src="/landing/alert-settings-v2@2x.png"/></div>
+        <picture>
+          <source type="image/webp" srcset="/landing/alert-settings-v2@2x.webp">
+          <source type="image/png" srcset="/landing/alert-settings-v2@2x.png">
+          <img alt="alerting settings" class="alerting-image big-drop-shadow img-fluid" src="/landing/alert-settings-v2@2x.png" />
+        </picture>
+      </div>
     </div>
   </div>
 </section>
