--- a/site/layouts/partials/e2e-pr-section.html
+++ b/site/layouts/partials/e2e-pr-section.html
@@ -38,7 +38,11 @@
         </ul>
       </div>
       <div class="col-sm-7">
-        <img alt="github merge pr screen" class="mb-4 pr-image" src="/landing/github-pr@2x.png"/>
+        <picture>
+          <source type="image/webp" srcset="/landing/github-pr@2x.webp">
+          <source type="image/png" srcset="/landing/github-pr@2x.png">
+          <img  alt="github merge pr screen" class="mb-4 pr-image" src="/landing/github-pr@2x.png"/>
+        </picture>
       </div>
     </div>
     <div class="row justify-content-center text-center">
