--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -9,6 +9,7 @@
   <link rel="preload" href="/fonts/fakt/FaktSoftPro-Blond.woff" as="font" as="font" type="font/woff2" crossorigin/>
   <link rel="preload" href="/fonts/fakt/FaktSoftPro-Medium.woff" as="font" as="font" type="font/woff2" crossorigin/>
   <link rel="preload" href="/fonts/ionicons.ttf?v=2.0.1" as="font" as="font" type="font/ttf" crossorigin/>
+  <link rel="preload" href="/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf" as="font" as="font" type="font/ttf" crossorigin/>
 
   <meta property="og:type" content="article" />
   <meta property="og:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | Checkly {{ end }}" />
