change address and offices layout

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -109,30 +109,31 @@
         <div class="row text-left justify-content-center pt-5 mb-5">
           <div class="col-sm-12 col-lg-8">
             <h2>Contact</h2>
-            <p>info@checklyhq.com<br>
+            <p><a href="mailto:info@checklyhq.com">info@checklyhq.com</a><br>
             Checkly Inc. has registered offices at:</p>
-            <address>
-              🇺🇸 United States<br>
-              One Boston Place, Suite 2600<br>
-              Boston, MA 02108<br>
-            </address>
-            <address>
-              🇳🇱 The Netherlands<br>
-              The J.P. Coenstraat 24 BIS<br>
-              Utrecht<br>
-            </address>
-            <p>
-              Chamber of Commerce: 74069349<br>
-              VAT: NL859762609B01<br>
-            </p>
-            <address>
-              🇩🇪 Germany<br>
-              Kopernikusstraße 35<br>
-              10243 Berlin<br>
-
-              entrance at:<br>
-              Comeniushof “Fabrik” Gubener Straße 47<br>
-            </address>
+            <div class="row pt-4">
+              <div class="col-sm-4 mb-lg-3">
+                <h5 class="add-star-before">🇺🇸 United States</h5>
+                <address>
+                  One Boston Place, Suite 2600<br>
+                  Boston, MA 02108<br>
+                </address>
+              </div>
+              <div class="col-sm-4 mb-lg-3">
+                <h5 class="add-star-before">🇳🇱 Netherlands</h5>
+                <address>
+                  The J.P. Coenstraat 24 BIS<br>
+                  3531 ET Utrecht <br>
+                </address>
+              </div>
+              <div class="col-sm-4 mb-lg-3">
+                <h5 class="add-star-before">🇩🇪 Germany</h5>
+                <address>
+                  Kopernikusstraße 35<br>
+                  10243 Berlin
+                </address>
+              </div>
+            </div>
           </div>
         </div>
       </div>
