feat: wIP - adds plans, feature table and faq. [ch-2177]

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -30,7 +30,7 @@
   <link rel="canonical" href="{{ .Permalink }}" />
 
 
-  <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
+<!--  <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>-->
   <script type="text/javascript">
     function OptanonWrapper() {}
   </script>
