--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,7 +23,7 @@
 @import 'share-list';
 @import 'mailchimp-signup-row';
 @import 'more-like-this';
-
+@import 'pricing-v2';
 @import 'sections/hero';
 @import 'sections/api-monitoring';
 @import 'sections/alerting';
