--- a/site/layouts/pricing-v2/list.html
+++ b/site/layouts/pricing-v2/list.html
@@ -198,7 +198,7 @@
 
       <div class="d-flex flex-column align-items-center text-center mb-5">
         <h2 class="mb-5" id="features">Feature overview</h2>
-        <table class="pricing__feature-table">
+        <table class="pricing__feature-table mb-4">
         <thead>
         <tr>
           <th>
@@ -326,12 +326,13 @@
           </tr>
         </tbody>
       </table>
+        <div class="text-muted">All plans are subject to our fair use policy. Check the FAQ below for more details.</div>
       </div>
 
 
       <!-- FAQ -->
 
-      <div class="pricing__faq d-flex flex-column justify-content-center text-center pt-5 mb-5 mx-auto">
+      <div class="pricing__faq d-flex flex-column justify-content-center text-center pt-4 mb-5 mx-auto">
         <h2 class="mb-5" id="faq">FAQ</h2>
 
         {{ range .Site.Data.pricing.faq.questions }}
